# cookiecutter-python-package

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
.github/workflows/: main.yml
hooks/: post_gen_project.py
tests/: test_template_init.py
{{cookiecutter.project_slug}}/: .bandit  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  README.md  mkdocs.yml  pyproject.toml  tox.ini  {% if cookiecutter.dev_platform == 'GitLab' -%} .gitlab-ci.yaml {%- endif %}  {% if cookiecutter.license == 'BSD-3-Clause' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE {%- endif %}
{{cookiecutter.project_slug}}/.github/: CONTRIBUTING.md  CONTRIBUTING.rst  SUPPORT.md  SUPPORT.rst
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: 01-bug-report.md  01-bug-report.yml  02-question.md  02-question.yml  03-feature-request.md  03-feature-request.yml  config.yml
{{cookiecutter.project_slug}}/.github/workflows/: cron.yml  main.yml  release.yml  test.yml
{{cookiecutter.project_slug}}/docs/: index.md  requirements.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_module}}/: __init__.py
{{cookiecutter.project_slug}}/tests/system/: test_import.py
