################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }
]
maintainers = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }
]
license = "{{ cookiecutter.license }}"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.8"
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    {%- if cookiecutter.license == "MIT" %}
    "License :: OSI Approved :: MIT License",
    {% elif cookiecutter.license == "BSD-3-Clause" %}
    "License :: OSI Approved :: BSD License",
    {% elif cookiecutter.license == "Apache-2.0" %}
    "License :: OSI Approved :: Apache Software License",
    {% else %}
    "License :: Other/Proprietary License",
    {% endif -%}
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
# TODO: add keywords
keywords = []
dynamic = ["version"]
dependencies = [
    "depinfo ~=2.2"
]

[project.urls]
Homepage = "{{ cookiecutter.__dev_platform_url }}/{{ cookiecutter.dev_platform_username }}/{{ cookiecutter.project_slug }}"
Documentation = "https://{{ cookiecutter.project_slug }}.readthedocs.io"
"Source Code" = "{{ cookiecutter.__dev_platform_url }}/{{ cookiecutter.dev_platform_username }}/{{ cookiecutter.project_slug }}"
"Bug Tracker" = "{{ cookiecutter.__dev_platform_url }}/{{ cookiecutter.dev_platform_username }}/{{ cookiecutter.project_slug }}/issues"
Download = "https://pypi.org/project/{{ cookiecutter.project_slug }}/#files"

[project.optional-dependencies]
dev = [
    "mkdocs-material ~=9.1",
    "mkdocstrings[python] ~=0.20",
    "mkdocs-awesome-pages-plugin ~=2.8",
    "pre-commit",
    "tox ~=4.0"
]

################################################################################
# Tool Configuration
################################################################################

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_module }}"]

[tool.hatch.build.hooks.vcs]
version-file = "src/{{ cookiecutter.project_module }}/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 88
python-version = ["py311"]
extend-exclude = '''
(
    _version.py
)
'''

[tool.isort]
profile = "black"
lines_after_imports = 2
lines_before_imports = 2
known_first_party = "{{ cookiecutter.project_module }}"
skip = ["__init__.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = [
    "src/{{ cookiecutter.project_module }}",
    "*/site-packages/{{ cookiecutter.project_module }}"
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2

[tool.ruff]
line-length = 88
select = ["ALL"]
