################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }
]
maintainers = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" }
]
license = "{{ cookiecutter.license }}"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.8"
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    {%- if cookiecutter.license == "MIT" %}
    "License :: OSI Approved :: MIT License",
    {% elif cookiecutter.license == "BSD-3-Clause" %}
    "License :: OSI Approved :: BSD License",
    {% elif cookiecutter.license == "Apache-2.0" %}
    "License :: OSI Approved :: Apache Software License",
    {% else %}
    "License :: Other/Proprietary License",
    {% endif -%}
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
# TODO: add keywords
keywords = []
dynamic = ["version"]
dependencies = [
    "depinfo ~=2.2"
]

[project.urls]
Homepage = "{{ cookiecutter.__dev_platform_url }}/{{ cookiecutter.dev_platform_username }}/{{ cookiecutter.project_slug }}"
Documentation = "https://{{ cookiecutter.project_slug }}.readthedocs.io"
"Source Code" = "{{ cookiecutter.__dev_platform_url }}/{{ cookiecutter.dev_platform_username }}/{{ cookiecutter.project_slug }}"
"Bug Tracker" = "{{ cookiecutter.__dev_platform_url }}/{{ cookiecutter.dev_platform_username }}/{{ cookiecutter.project_slug }}/issues"
Download = "https://pypi.org/project/{{ cookiecutter.project_slug }}/#files"

[project.optional-dependencies]
dev = [
    "hatch",
    "pre-commit",
]

################################################################################
# Tool Configuration
################################################################################

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_module }}"]

[tool.hatch.build.hooks.vcs]
version-file = "src/{{ cookiecutter.project_module }}/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''
(
    _version.py
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = [
    "src/{{ cookiecutter.project_module }}",
    "*/site-packages/{{ cookiecutter.project_module }}"
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",  # 'Missing docstring in __init__' ignored because pydoclint wants us to document the class instead.
    "D203",  # '1 blank line required before class docstring' ignored because we want no blank line.
    "D212",  # 'Multi-line docstring summary should start at the first line' ignored because we want the summary to start on the second line.
    "D407",  # 'Missing dashed underline after section' ignored because Google style docstrings don't underline.
    "ANN002",  # 'Missing type annotation for {*args} in method'.
    "ANN003",  # 'Missing type annotation for {*kwargs} in method'.
    "ANN101",  # 'Missing type annotation for {self} in method'.
    "ANN102",  # 'Missing type annotation for {cls} in classmethod'.
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E401",  # 'Multiple imports on one line'
    "E402",  # 'Module level import not at top of file'
    "F401",  # 'Imported but unused'
    "I001",  # 'Import block is un-sorted or un-formatted' ignored because we may have to import in a particular, not-alphabetical order.
]
"tests/**/*.py" = [
    "S101",  # 'Use of assert detected' ignored because we are using pytest.
    "INP001",  # 'Insecure input' ignored because we are testing.
    "ANN201",  # 'Missing type annotation for {return}' ignored because all tests return `None`.
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["src", "{{ cookiecutter.project_module }}"]
lines-after-imports = 2

[tool.pydoclint]
style = "google"  # TODO: Other styles are possible here.
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false

# TODO: Adjust mypy configuration.
#[tool.mypy]
#plugins = [
#    "pydantic.mypy",
#]

# Stop mypy from complaining about missing types from imports.
#[[tool.mypy.overrides]]
#module = [
#    "pandas",
#]
#ignore_missing_imports = true

#[tool.pydantic-mypy]
#init_forbid_extra = true
#init_typed = true
#warn_required_dynamic_aliases = true

################################################################################
# Hatch Environments
################################################################################

[tool.hatch.envs.style]
description = """Check the style of the codebase."""
dependencies = [
    "pydoclint",
    "ruff",
]
detached = true

[tool.hatch.envs.style.scripts]
docstrings = "pydoclint"
code = "ruff check"
check = ["docstrings", "code"]

[tool.hatch.envs.safety]
description = """Check dependencies for security vulnerabilities."""
extra-dependencies = [
    "safety",
]

[tool.hatch.envs.safety.scripts]
check = ["safety check --full-report"]

[tool.hatch.envs.types]
description = """Check the static types of the codebase."""
dependencies = [
    "mypy",
]

[tool.hatch.envs.types.scripts]
check = ["mypy src/{{ cookiecutter.project_module }}"]

[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
extra-dependencies = [
    "mkdocs-material ~=9.5",
    "mkdocstrings[python] ~=0.24",
    "mkdocs-awesome-pages-plugin ~=2.9",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve"

[tool.hatch.envs.install]
description = """Test the installation the package."""
dependencies = [
    "pip",
    "twine",
]

[tool.hatch.envs.install.scripts]
check = [
    "pip check",
    "hatch build",
    "twine check dist/*",
]

[tool.hatch.envs.test]
description = """Run the test suite."""
dev-mode = false
extra-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-raises",
    "pytest-randomly",
    "pytest-xdist",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.12"]

[tool.hatch.envs.test.scripts]
run = [
    "pip install .",
    "pytest --cov={{ cookiecutter.project_module }} --cov-report=term-missing {args}",
]
